[tool.poetry]
name = "dsgov-data-transformgenerator"
version = "0.1.0"
description = ""
authors = ["Mathieson <mathieson@seedrocket.io>"]
readme = "README.md"
packages = [{include = "dsgov_data_transformgenerator"}]

[tool.poetry.dependencies]
python = "^3.11"
dbt-bigquery = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
